# api/controller/api_controller.py
@@ -1,8 +1,8 @@
 import json
 
 import connexion
-from api import logger
-
+from api import logger, db
+from flask import request
 from api.repository.repo import (UserRepo)
 from api.repository.schema import (UserSchema)
 
@@ -22,6 +22,23 @@ def omni_db_entity_all_json():
         logger.error(ex)
         return ex, 500
     
+    
+    
+def omni_db_entity_create_json():
+    try:
+        user_req_json = request.get_json()
+        logger.info("omni_db_entity_create_json -> ", user_req_json)
+        
+        user_data = userSchema.load(user_req_json, session=db.session)
+        response = userRepo.create(user_data)
+        if response:
+            return userSchema.dump(user_data),201
+        return {'message': 'ITEM_EXIST'}, 404
+    except Exception as ex:
+        logger.error(ex)
+        return {"message" : ex}, 500
+
+   
     
 def omni_db_entity_fetchbyid_json(_id):
     try:
